[package]
name = "Serial2Tcp_RS"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[dependencies]
serialport = {git = "https://github.com/Susurrus/serialport-rs.git"}
futures = "0.3.16"
clap = "2.33.3"
rust-ini = "0.17.0"

[patch."https://github.com/Susurrus/serialport-rs.git"]
serialport = { path = "./vendor/serialport-rs"}