[package]
name = "Serial2Tcp_RS"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[dependencies]
serialport = {git = "https://github.com/serialport/serialport-rs.git"}
futures = "0.3.16"
clap = { version = "4.3.0", features = ["derive"] }
rust-ini = "0.19.0"
getch = "0.3.1"

[patch."https://github.com/serialport/serialport-rs.git"]
serialport = { path = "./vendor/serialport-rs"}
